*SVN*

* Fixed that compute_public_path should recognize external URLs, so image_tag("http://www.example.com/images/icon.gif") is not prefixed with the relative url path #1254 [victor-ronr-trac@carotena.net]

* Added support for descending year values in DateHelper#select_year, like select_year(Date.today, :start_year => 2005, :end_year => 1900), which would count down from 2005 to 1900 instead of the other way #1274 [nwoods@mail.com]

* Fixed that FormHelper#checkbox should return a checked checkbox if the value is the same as checked_value #1286 [Florian Weber]

* Fixed Form.disable in Prototype #1317 [Wintermute]

* Added accessors to logger, params, response, session, and headers from the view, so you can write <% logger.info "stuff" %> instead of <% @logger.info "others" %> -- more consistent with the preferred way of accessing these attributes and collections from the controller

* Added support for POST data in form of YAML or XML, which is controller through the X-POST_DATA_MARSHAL header. Example request:

    X-POST_DATA_MARSHAL: xml
    <request><item><content>HelloWorld</content></item></request>
  
  ...is the same as:

    X-POST_DATA_MARSHAL: yaml
    ---
    item:
      content: HelloWorld

  ...is the same as:
  
    item[content]=HelloWorld
  
  Which in the end turns into { "item" => { "content" => "HelloWorld" } }. This makes it a lot easier to publish REST web services on top of your regular actions (as they won't care).
  
  Example Curl call:

    curl -H 'X-POST_DATA_MARSHAL: xml' -d '<request><item><content>KillMeMore</content></item></request>' http://www.example.com/service

  You can query to find out whether a given request came through as one of these types with:
    - request.post_format? (:query_string, :xml or :yaml)
    - request.formatted_post? (for either xml or yaml)
    - request.xml_post?
    - request.yaml_post?

* Added bundling of XmlSimple by Maik Schmidt
